adding ical link for syncing

--- a/events.html
+++ b/events.html
@@ -7,4 +7,6 @@ permalink: /events/
 <div class="home" id="home">
   <h1 class="pageTitle">Upcoming Events</h1>
   <iframe src="https://calendar.google.com/calendar/embed?src=3emgq3medd66aqpcrngjao0t98%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+  Download our Calender in <a href="https://calendar.google.com/calendar/ical/3emgq3medd66aqpcrngjao0t98%40group.calendar.google.com/public/basic.ics">ICAL</a> format.
 </div>
